update: added email registration verification process and various restructurizations and abstractions
Changes:
- added sending verification code feature through email(mailersend)
- implemented a shared SpecificUser interface for Student and Teacher models and a shared SpecificUserForm for their respective forms
- created RoleRegistrationView to implemented the abstracted specific user form
- UserRegistrationView now handles init of specific form to implement based on role saved through the RegistrationSessionService
- changed strand and track into entities with their own repos
- restructured ui package to be feature based

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.flowingcode,application
 spring.jpa.defer-datasource-initialization = true
+
+spring.mail.host=smtp.mailersend.net
+spring.mail.port=587
+spring.mail.username=MS_oQRTj7@test-p7kx4xwxr5mg9yjr.mlsender.net
+spring.mail.password=mssp.4CMDVSl.pr9084zzm2v4w63d.4sI5pAH
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
