--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.mail.username=MS_oQRTj7@test-p7kx4xwxr5mg9yjr.mlsender.net
 spring.mail.password=mssp.4CMDVSl.pr9084zzm2v4w63d.4sI5pAH
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:zakky
